--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Random Thoughts
 description:      Opinions, Commentary and Random Thoughts of Stephen Lange.
 url:              http://stephenlange.org.
 signoff:          Stephen Lange
-disqus_shortname: cyberpunkdad # disqus comment thread for post header options. ( leave blank if unwanted. )
+disqus_shortname: stvlange # disqus comment thread for post header options. ( leave blank if unwanted. )
 facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 
