--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "http://stephenlange.org/"
 basename: ""
 
 description: >
-  Stephen Lange's mutterings & musings.
+  Stephen Lange's Mutterings & Musings
 
 author:
   name: Stephen Lange
