--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -15,7 +15,7 @@ social:
   #tumblr: 
   linkedin: stvlange
   #gplus: 
-  #gravatar: stvlange
+  gravatar: 3fc5c9bb575b9d7bfc99a3135e8a37ab
 
 # "Hi, I'm _______"
 name: Stephen Lange
