--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -18,7 +18,7 @@ social:
   gravatar: 3fc5c9bb575b9d7bfc99a3135e8a37ab
 
 # "Hi, I'm _______"
-name: Stephen Lange
+name: STEPHEN LANGE
 email: stvlange@gmail.com
 tagline: "Never trust atoms, they make up everything."
 
