--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # General Jekyll Config
 highlighter: pygments
-url: http://stephenlange.org
+url: http://www.stephenlange.org
 lsi: false
 exclude: [LICENSE, CNAME, README.md, .gitignore, Gemfile, Gemfile.lock]
 
