--- a/_config.yml
+++ b/_config.yml
@@ -1,40 +1,2 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-title: Wandering Thoughts
-author: Stephen Lange
-author_link: http://www.stephenlange.org
-author_description: Dad, Dude, Dreamer
-email: stvlange@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://stephenlange.org" # the base hostname & protocol for your site
-
-# Picturefill
-# A responsive image polyfill: http://scottjehl.github.io/picturefill/
-picturefill: false
-
-# Typography
-# To use, publish a kit and enter the ID here. If you do not wish to use Typekit,
-# leave this ID blank
-typekit_kit_id: kwf5dox
-
-# Build settings
-gems: [jekyll-paginate]
-markdown: kramdown
-permalink: pretty
-
-# Pagination
-paginate: 5
-
-# Sass
-sass:
-    style: :compressed
+markdown: rdiscount
+highlighter: pygments
