--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,27 @@
-markdown: rdiscount
-highlighter: pygments
+baseurl: /stvlange
+title: Stephen Lange
+subtitle: Thoughts, Commentary & Rambling Diatribes
+author: Stephen Lange
+simple_search: http://google.com/search
+description: Thoughts, Commentary & Rambling Diatribes of Stephen Lange
+name: stvlange
+markdown: kramdown
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+permalink: /articles/:short_year/:title
+timezone: America/Chicago
+excerpt_separator: <!--more-->  # you can specify your own separator, of course.
+exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'UploadToGithub.Rakefile', 'README.md']
+post:
+  template: _post.txt
+  extension: md
+page:
+  template: _page.txt
+  extension: md
+editor: gvim
+git:
+  branch: master
+transfer:
+  command: rsync
+  settings: -av
+  source: _site/
+  destination: ~/stvlange.github.com/
