--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: /stvlange
+baseurl: /stvlange.github.com
 title: Stephen Lange
 subtitle: Thoughts, Commentary & Rambling Diatribes
 author: Stephen Lange
