--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Stephen Lange
 subtitle: Thoughts, Commentary & Rambling Diatribes
 author: Stephen Lange
 simple_search: http://google.com/search
-description: Thoughts, Commentary & Rambling Diatribes of Stephen Lange
+description: stephenlange.org
 name: stvlange
 markdown: kramdown
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
