--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 baseurl: /stvlange.github.com
 title: Stephen Lange
-subtitle: Thoughts, Commentary & Rambling Diatribes
+subtitle: stephenlange.org
 author: Stephen Lange
 simple_search: http://google.com/search
 description: stephenlange.org
